--- a/POS/assets/css/tinyscrollbar.css
+++ b/POS/assets/css/tinyscrollbar.css
@@ -1,7 +1,7 @@
 #scrollbar1
 {
     width:100%;
-    margin:20px auto 20px;
+    margin:0px auto 7px;
     position: relative;
 }
 
@@ -20,7 +20,7 @@
     left:0;
     top:0;
     margin:0;
-    padding: 10px 0px;
+    padding: 5px 0px 10px 0px;
     width: 100%;
 }
 
